Conserto dos mil erros

--- a/Eletricidade.html
+++ b/Eletricidade.html
@@ -194,7 +194,7 @@
     </p>
     <br>
     <div class="center">
-      <img src="Imagens/OIG (1).jpeg" width="50%" alt="Foto Satelite">
+      <img src="Imagens/fotoParaEletricidade.jpeg" width="50%" alt="Foto Satelite">
 
     </div>
     <legend class="ref-imagens7">
