--- a/Eletricidade.html
+++ b/Eletricidade.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="cabeçalho">
+  <header>
     <a href="index.html">
       <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
     </a>
@@ -24,176 +24,164 @@
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <h1 style="text-align: center;">Tópicos</h1>
-      <a href="Ondas.html"><button type="button" class="btn">
+      <nav>
+        <button type="button" onclick="ondas()" class="btn">
           <strong>Ondas</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <br>
-      <a href="Leis De Newton.html">
-        <button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+
+        <button type="button" onclick="leis()" class="btn">
           <strong>Leis de Newton</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <a href="Mecanica.html">
-        <br><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="mecanica()" class="btn">
           <strong>Mecânica</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <a href="Energia.html">
-        <br><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="energia()" class="btn">
           <strong>Energia</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <a href="Eletricidade.html">
-        <br><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="eletricidade()" class="btn">
           <strong>Eletricidade</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <a href="CorrentesEletricas.html">
-        <br><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="correntes()" class="btn">
           <strong>Correntes Elétricas</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <a href="TermoFisica.html">
-        <br><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="termofisica()" class="btn">
           <strong>Termofísica</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <br><a href="Optica.html"><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="optica()" class="btn">
           <strong>Óptica</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <br>
-      <a href="Bibliografia.html"><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="bibli()" class="btn">
           <strong>Bibliografia</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <br>
-      <a href="sambaqui.html"><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="sambaqui()" class="btn">
           <strong>Sambaqui</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <br>
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+      </nav>
     </div>
     <div class="buscas">
       <div id="main">
-        <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
-          </div></span>
+        <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;</span>
       </div>
     </div>
-  </div>
-  <br>
-  <div class="conteudo">
-    <br>
-    <div id="center">
-      <h1 style="font-size: 12pt;">ELETRICIDADE</h1>
-    </div>
-
-    <br>
-    <p class="margem">
+  </header>
+  <main class="conteudo" style="margin-top: 10px;">
+    <h1 style="font-size: 12pt; text-align: center; margin-top: 15px;">ELETRICIDADE</h1>
+    <p class="margem margemEntreTextos">
       A eletricidade pode ser definida como os fenómenos que ocorrem durante o desequilíbrio ou movimentação das cargas
       elétricas de um átomo, "uma propriedade inerente aos prótons e elétrons” (HELERBROCK,2023).</p> <br>
-    <p class="margem">A eletricidade pode
+    <p class="margem margemEntreTextos">A eletricidade pode
       ser dividida entre fenômenos eletrostáticos e eletrodinâmicos, referentes às cargas em repouso e em movimento. A
       eletricidade também pode ser compreendida como “todos os efeitos que as cargas elétricas produzem sobre a matéria”
       (HELERBROCK, 2023).
-
-      <br>
     </p>
-    <br>
-    <p class="margem">
+    <p class="margem margemEntreTextos">
       Os elétrons possuem a carga fundamental, que corresponde à menor carga elétrica possível, equivalente a cerca de
       1,6.10^19 C. Os elétrons podem ser conduzidos quando são agitados ou estão sob a ação de um campo elétrico
       externo, isso gera as correntes elétricas e todos os seus fenômenos relacionados (HELERBROCK, 2023).
-      <br>
     </p>
-    <br>
-    <p class="margem">
+    <p class="margem margemEntreTextos">
       É comum ver a “eletricidade empregada como a quantidade de energia consumida nos circuitos elétricos”
       (HELERBROCK,2023).</p><br>
-    <p class="margem"> Essa energia é chamada de energia potencial elétrica, calculada através da potência elétrica,
+    <p class="margem margemEntreTextos"> Essa energia é chamada de energia potencial elétrica, calculada através da
+      potência elétrica,
       que
       trata-se da energia elétrica consumida por um dispositivo a cada segundo. A energia potencial elétrica é comumente
       medida em KWh, que é uma unidade utilizada principalmente pelas companhias de distribuição de energia elétrica, e
       além do KWh, essa energia também pode ser medida em joules, a proporção entre essas unidades é: 1KWh = 3,6.10^6 J
       (HELERBROCK,2023).
     </p>
-
-    <br>
-    <p class="margem">
+    <p class="margem margemEntreTextos">
     </p>
-    <br>
-    <div class="center">
+    <div class="center margemEntreTextos">
       <img src="Imagens/fotoParaEletricidade.jpeg" width="50%" alt="Foto Satelite">
 
     </div>
@@ -201,20 +189,14 @@
       <P>Fonte: HELERBROCK, 2023.
       </P>
     </legend>
-    <br>
-    <h1 style="margin-left: 3cm ;"> Refêrencias </h1>
-    <br>
-    <br>
-    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;">HELERBROCK, Rafael.
+    <h1 class="margemEntreTextos" style="margin-left: 3cm ;"> Refêrencias: </h1>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5; margin-top: 20px; margin-bottom: 10px;">HELERBROCK, Rafael.
       <strong class="bibliografia">"Eletricidade"</strong> Brasil Escola. Disponível em:
       https://brasilescola.uol.com.br/fisica/eletricidade.htm. Acesso em 21 de agosto de 2023.
     </p>
-    <br>
-
-    <br>
-  </div>
+  </main>
   <br>
-  <div class="rodape">
+  <footer class="rodape">
     <div class="texto-rodape">
       <div class="parte-rodape-esquerdo">
         <strong class="cabeca12">
@@ -227,11 +209,12 @@
           <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
         </strong>
       </div>
-
-
-      <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif"
-            alt="Logo IFC" width="300px"></strong></div>
     </div>
+
+
+    <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif" alt="Logo IFC"
+          width="300px"></strong></div>
+  </footer>
 
 </body>
 
