--- a/Ondas.html
+++ b/Ondas.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="cabeçalho">
+  <header>
     <a href="index.html">
       <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
     </a>
@@ -150,7 +150,7 @@
           </div></span>
       </div>
     </div>
-  </div>
+  </header>
   <br>
   <div class="conteudo">
     <br>
@@ -440,7 +440,7 @@
 <br>
   </div>
   <br>
-  <div class="rodape">
+  <footer>
 
     <div class="texto-rodape">
       <div class="parte-rodape-esquerdo">
@@ -457,6 +457,6 @@
       <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif"
             alt="Logo IFC" width="300px"></strong></div>
     </div>
-  </div>
+  </footer>
 </body>
 </html>
