--- a/leis_de_newton.html
+++ b/leis_de_newton.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="cabeçalho">
+  <header>
     <a href="index.html">
       <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
     </a>
@@ -143,7 +143,7 @@
           </div>
         </button></a>
       <br>
-    </div>
+      </header>
 <div class="buscas">
     <div id="main">
       <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
@@ -316,7 +316,7 @@
     <br>
   </div>
   <br>
-  <div class="rodape">
+  <footer>
 
     <div class="texto-rodape">
       <div class="parte-rodape-esquerdo">
@@ -336,7 +336,7 @@
             alt="Logo IFC" width="300px"></strong></div>
 
     </div>
-  </div>
+  </footer>
 </body>
 
 </html>
