Uns concerto ai pae

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <img src="Imagens/ondas_alfa.jpg" class="temas" alt="">
       </div>
     </a>
-    <a href="LeisDeNewton.html">
+    <a href="leis_de_newton.html">
       <div id="caixaLeis">
         <p><strong class="cabeca12-white">Leis de Newton</strong></p>
         <img
@@ -309,7 +309,7 @@
     </div>
     <div class="espaco"></div>
 
-    <div class="rodape">
+    <footer>
 
       <div class="texto-rodape">
         <div class="parte-rodape-esquerdo">
@@ -330,7 +330,7 @@
         </div>
 
       </div>
-    </div>
+    </footer>
 
     <div id="magica">
       <div id="star-wars">
