correçao dos erros visuais no conteúdo

--- a/Eletricidade.html
+++ b/Eletricidade.html
@@ -153,11 +153,11 @@
       </div>
     </div>
   </header>
-  <main class="conteudo" style="margin-top: 10px;">
+  <main class="conteudo margemParaMain">
     <h1 style="font-size: 12pt; text-align: center; margin-top: 15px;">ELETRICIDADE</h1>
     <p class="margem margemEntreTextos">
       A eletricidade pode ser definida como os fenómenos que ocorrem durante o desequilíbrio ou movimentação das cargas
-      elétricas de um átomo, "uma propriedade inerente aos prótons e elétrons” (HELERBROCK,2023).</p> <br>
+      elétricas de um átomo, "uma propriedade inerente aos prótons e elétrons” (HELERBROCK,2023).</p>
     <p class="margem margemEntreTextos">A eletricidade pode
       ser dividida entre fenômenos eletrostáticos e eletrodinâmicos, referentes às cargas em repouso e em movimento. A
       eletricidade também pode ser compreendida como “todos os efeitos que as cargas elétricas produzem sobre a matéria”
@@ -170,7 +170,7 @@
     </p>
     <p class="margem margemEntreTextos">
       É comum ver a “eletricidade empregada como a quantidade de energia consumida nos circuitos elétricos”
-      (HELERBROCK,2023).</p><br>
+      (HELERBROCK,2023).</p>
     <p class="margem margemEntreTextos"> Essa energia é chamada de energia potencial elétrica, calculada através da
       potência elétrica,
       que
@@ -185,28 +185,27 @@
       <img src="Imagens/fotoParaEletricidade.jpeg" width="50%" alt="Foto Satelite">
 
     </div>
-    <legend class="ref-imagens7">
+    <div class="ref-imagens7">
       <P>Fonte: HELERBROCK, 2023.
       </P>
-    </legend>
+    </div>
     <h1 class="margemEntreTextos" style="margin-left: 3cm ;"> Refêrencias: </h1>
     <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5; margin-top: 20px; margin-bottom: 10px;">HELERBROCK, Rafael.
       <strong class="bibliografia">"Eletricidade"</strong> Brasil Escola. Disponível em:
       https://brasilescola.uol.com.br/fisica/eletricidade.htm. Acesso em 21 de agosto de 2023.
     </p>
   </main>
-  <br>
+  
   <footer class="rodape">
     <div class="texto-rodape">
-      <div class="parte-rodape-esquerdo">
-        <strong class="cabeca12">
-          <h4>Desenvolvedores:
+      <div class="parte-rodape-esquerdo"><h4>Desenvolvedores:
           </h4>
-          <p>Anthony Gabriel Loche dos Reis</p>
-          <p>Claudio Anzini Neto</p>
-          <p>Gustavo Correa Kruger</p>
-          <p>Pedro Henrique da Silva Malaquias</p>
-          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+        <strong class="cabeca12">
+          <p>Anthony Gabriel Loche dos Reis <br>
+          Claudio Anzini Neto <br>
+          Gustavo Correa Kruger <br>
+          Pedro Henrique da Silva Malaquias <br>
+          Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
         </strong>
       </div>
     </div>
