--- a/Ondas.html
+++ b/Ondas.html
@@ -151,7 +151,7 @@
       </div>
     </header>
     
-    <main class="conteudo">
+    <main class="conteudo margemParaMain">
       
       <div class="center">
         <h1 style="font-size: 12pt;"> FENOMENOS ONDULATORIOS </h1>
@@ -445,11 +445,11 @@
         <div class="cabeca12">
           <h4>Desenvolvedores:
           </h4>
-          <p>Anthony Gabriel Loche dos Reis</p>
-          <p>Claudio Anzini Neto</p>
-          <p>Gustavo Correa Kruger</p>
-          <p>Pedro Henrique da Silva Malaquias</p>
-          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+          <p>Anthony Gabriel Loche dos Reis<br>
+          Claudio Anzini Neto<br>
+          Gustavo Correa Kruger<br>
+          Pedro Henrique da Silva Malaquias<br>
+          Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
         </div>
       </div>
 
