--- a/correntes_eletricas.html
+++ b/correntes_eletricas.html
@@ -153,9 +153,9 @@
       </div>
     </div>
   </header>
-  <br>
-  <div class="conteudo">
-    <h1 style="font-size: 12pt; text-align: center; margin-top: 15px;">CORRENTES ELÉTRICAS</h1>
+
+  <main class="conteudo margemParaMain">
+    <div class="center"><h1 style="font-size: 12pt;">CORRENTES ELÉTRICAS</h1></div>
     <p class="margemEntreTextos">
     <blockquote>“A corrente elétrica designa o movimento ordenado de cargas elétricas, partículas eletrizadas chamadas
       de íons ou elétrons, dentro de um sistema condutor”(GOUVEIA, 2023).</blockquote>
@@ -187,10 +187,10 @@
       <img src="Imagens/Corrente-continua-e-alternada-720.webp" alt="Foto Satelite" style="width: 51%;">
 
     </div>
-    <legend class="ref-imagens7">
+    <div class="ref-imagens7">
       <P>Fonte: ALVES, 2019.
       </P>
-    </legend>
+    </div>
     <p class="margem margemEntreTextos">A tensão elétrica de um circuito refere-se à diferença do potencial elétrico de
       dois pontos de um
       condutor, de
@@ -244,20 +244,19 @@
       <strong class="bibliografia">“Corrente Elétrica”</strong>. “Brasil Escola" Disponível em:
       https://brasilescola.uol.com.br/fisica/corrente-eletrica.htm. Acesso em 23 de março de 2023.
     </p>
-  </div>
-  </div>
-  <br>
+  </main>
+  
   <footer class="rodape">
     <div class="texto-rodape">
       <div class="parte-rodape-esquerdo">
+        <h4>Desenvolvedores:
+        </h4>
         <strong class="cabeca12">
-          <h4>Desenvolvedores:
-          </h4>
-          <p>Anthony Gabriel Loche dos Reis</p>
-          <p>Claudio Anzini Neto</p>
-          <p>Gustavo Correa Kruger</p>
-          <p>Pedro Henrique da Silva Malaquias</p>
-          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+          <p>Anthony Gabriel Loche dos Reis <br>
+          Claudio Anzini Neto <br>
+          Gustavo Correa Kruger <br> 
+          Pedro Henrique da Silva Malaquias <br> 
+          Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
         </strong>
       </div>
     </div>
