--- a/MecanicaRe.html
+++ b/MecanicaRe.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="cabeçalho">
+  <header>
     <a href="index.html">
       <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
     </a>
@@ -23,200 +23,206 @@
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <h1 style="text-align: center;">Tópicos</h1>
-      <a href="Ondas.html"><button type="button" class="btn">
+      <nav>
+        <button type="button" onclick="ondas()" class="btn">
           <strong>Ondas</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <br>
-      <a href="Leis De Newton.html">
-        <button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+
+        <button type="button" onclick="leis()" class="btn">
           <strong>Leis de Newton</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <a href="Mecanica.html">
-        <br><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="mecanica()" class="btn">
           <strong>Mecânica</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <a href="Energia.html">
-        <br><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="energia()" class="btn">
           <strong>Energia</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <a href="Eletricidade.html">
-        <br><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="eletricidade()" class="btn">
           <strong>Eletricidade</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <a href="CorrentesEletricas.html">
-        <br><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="correntes()" class="btn">
           <strong>Correntes Elétricas</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <a href="TermoFisica.html">
-        <br><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="termofisica()" class="btn">
           <strong>Termofísica</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <br><a href="Optica.html"><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="optica()" class="btn">
           <strong>Óptica</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <br>
-      <a href="Bibliografia.html"><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="bibli()" class="btn">
           <strong>Bibliografia</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <br>
-      <a href="sambaqui.html"><button type="button" class="btn">
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+
+        <button type="button" onclick="sambaqui()" class="btn">
           <strong>Sambaqui</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
-          </div>
+          <span class="container-stars">
+            <span class="stars"></span>
+          </span>
 
-          <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-        </button></a>
-      <br>
+          <span class="glow">
+            <span class="circle"></span>
+            <span class="circle"></span>
+          </span>
+        </button>
+      </nav>
     </div>
-<div class="buscas">
-    <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
-        </div></span>
+    <div class="buscas">
+      <div id="main">
+        <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;</span>
+      </div>
     </div>
+  </header>
   </div>
-  </div>
-  
-    <div class="conteudo">
-      <br>
-<div id="center">
+    <main class="conteudo margemParaMain">
+<div class="center">
     <h1 style="font-size: 15pt;"> MECÂNICA RELATIVISTA </h1>
   </div>
-        <br>
-        <p class="margem">A mecânica relativista é a parte da física que estuda o movimento de objetos em altas velocidades próximas à
+        <p class="margem margemEntreTextos">A mecânica relativista é a parte da física que estuda o movimento de objetos em altas velocidades próximas à
             velocidade da luz. A mecânica relativista é baseada nas teorias da relatividade restrita, propostas por
             Albert Einstein em 1905 e finalizada em 1915 com a teoria da relatividade geral.(GOUVEIA, 2023).</p>
-        <br>
 
-        <div id="center">
+        <div class="center">
           <h1 style="font-size: 15pt;"> RESTRITA </h1>
         </div>
-        <br>
 
-        <p class="margem">
+        <p class="margem margemEntreTextos">
             Segundo Prof. Rosimar Gouveia, a relatividade restrita diz que as leis da física são as mesmas para todos os
             observadores em movimento uniforme (dinâmica estudada anteriormente na página), independentemente da
             velocidade relativa entre eles. Isso significa que as leis da física devem levar em consideração que não
             mudam com a velocidade do observador.(GOUVEIA, 2023).
         </p>
-        <br>
-        <div id="center">
+        <div class="center">
           <h1 style="font-size: 15pt;"> GERAL </h1>
         </div>
-        <br>
-        <p class="margem"> A teoria da relatividade geral leva em consideração um observador em movimento variável próximo a velocidade
+        <p class="margem margemEntreTextos"> A teoria da relatividade geral leva em consideração um observador em movimento variável próximo a velocidade
             da luz, o que a teoria da relatividade restrita não considerava. (GOUVEIA, 2023). Principal Fórmula: E= mc²
         </p>
 
-        <p>
-        <p class="margem">E= energia em repouso.
+        <p class="margem margemEntreTextos">E= energia em repouso.
         </p>
-        <p class="margem"> m= massa.
+        <p class="margem margemEntreTextos"> m= massa.
         </p>
-        <p class="margem"> c²= velocidade da luz no vácuo.</p>
-        <br>
-        <div id="center">
+        <p class="margem margemEntreTextos"> c²= velocidade da luz no vácuo.</p>
+        <div class="center">
           <p><strong class="bibliografia">Figura 2:</strong> ESPAÇO</p>
           <img src="Imagens/fotorelatividade.jpg" alt="Isaac Newton" width="35%">
         </div>
-        <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
-        </legend>
-        <br>
-        <div id="center">
+        <div class="ref-imagens">Fonte: GOUVEIA, 2023.
+        </div>
+        <div class="center">
           <h1 style="font-size: 15pt;"> CINEMÁTICO </h1>
         </div>
-      <br>
   
-      <p class="margem">A cinemática é uma parte da mecânica que estuda o movimento dos objetos, sem se preocupar com as causas desse
+      <p class="margem margemEntreTextos">A cinemática é uma parte da mecânica que estuda o movimento dos objetos, sem se preocupar com as causas desse
         movimento, ou seja, sem considerar as forças que atuam sobre o objeto. A cinemática se preocupa em descrever o
         movimento em termos de posição, velocidade e aceleração do objeto, bem como a trajetória que ele percorre.(DIAS,
         2023).</p>
-  <br>
-  <div id="center">
+  <div class="center">
     <p><strong class="bibliografia">Figura 3:</strong> FORÇAS</p>
     <img src="Imagens/fotomecanica2.webp" alt="Isaac Newton" width="35%">
   </div>
-  <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
-  </legend>
-  <BR></BR>
-    </div>
+  <div class="ref-imagens">Fonte: GOUVEIA, 2023.
+  </div>
+</main>
 
-    <div class="rodape"></div>
+<footer class="rodape">
+  <div class="texto-rodape">
+    <div class="parte-rodape-esquerdo"><h4>Desenvolvedores:
+        </h4>
+      <strong class="cabeca12">
+        <p>Anthony Gabriel Loche dos Reis <br>
+        Claudio Anzini Neto <br>
+        Gustavo Correa Kruger <br>
+        Pedro Henrique da Silva Malaquias <br>
+        Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+      </strong>
+    </div>
+  </div>
+
+
+  <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif" alt="Logo IFC"
+        width="300px"></strong></div>
+</footer>
 
 </body>
 
