--- a/mecanica.html
+++ b/mecanica.html
@@ -292,7 +292,7 @@
     <div class="center">
       <h3>Tópicos em Mecanica</h3></div>
       <div class="botaoMecanica">   
-      <a href="MecanicaRe.html"><button type="button" class="btn">
+      <a href="mecanica_re.html"><button type="button" class="btn">
           <strong>Mecanica Relativista</strong>
           <div class="container-stars">
             <div class="stars"></div>
@@ -303,7 +303,7 @@
             <div class="circle"></div>
           </div>
         </button></a>
-      <a href="Dinamica.html"><button type="button" class="btn">
+      <a href="dinamica.html"><button type="button" class="btn">
           <strong>Dinamica</strong>
           <div class="container-stars">
             <div class="stars"></div>
