--- a/index.html
+++ b/index.html
@@ -201,10 +201,6 @@
         </p>
 
         <p class="caixas">
-          Gustavo Correa Kruger
-        </p>
-
-        <p class="caixas">
           Pedro Henrique da Silva Malaquias
         </p>
       </div>
@@ -316,11 +312,10 @@
           <div class="cabeca12">
             <h4>Desenvolvedores:
             </h4>
-            <p>Anthony Gabriel Loche dos Reis</p>
-            <p>Claudio Anzini Neto</p>
-            <p>Gustavo Correa Kruger</p>
-            <p>Pedro Henrique da Silva Malaquias</p>
-            <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+            <p>Anthony Gabriel Loche dos Reis<br>
+            Claudio Anzini Neto <br>
+            Pedro Henrique da Silva Malaquias <br>
+            Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
           </div>
         </div>
 
