--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
       <img src="Imagens/atomo.png" alt="" class="veio">
       <div class="display: grid">
-        <h1><strong class="cabeca2"> Vou Te Mostrar Que Física Não É Chata!</strong></h1>
+        <!-- <h1 id="destaque"><strong class="cabeca2"> Vou Te Mostrar Que Física Não É Chata!</strong></h1> -->
 
         <p class="textos">A física é uma ciência fascinante que nos permite compreender as leis fundamentais da natureza
           e
@@ -312,10 +312,11 @@
           <div class="cabeca12">
             <h4>Desenvolvedores:
             </h4>
-            <p>Anthony Gabriel Loche dos Reis<br>
-            Claudio Anzini Neto <br>
-            Pedro Henrique da Silva Malaquias <br>
-            Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+            <p>Anthony Gabriel Loche dos Reis</p>
+            <p>Claudio Anzini Neto</p>
+            <p>Jonatas Silva Peraza</p>
+            <p>Pedro Henrique da Silva Malaquias</p>
+            <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
           </div>
         </div>
 
